Rename SymptomsRules to CRules
