# core/interfaces.go
@@ -75,7 +75,7 @@ type Services interface {
 	GetSymptoms(appVersion *string) (*model.Symptoms, error)
 
 	GetSymptomRuleByCounty(countyID string) (*model.SymptomRule, []*model.CountyStatus, error)
-	GetSymptomsRulesByCounty(appVersion *string, countyID string) (*model.SymptomsRules, error)
+	GetCRulesByCounty(appVersion *string, countyID string) (*model.CRules, error)
 	GetAccessRuleByCounty(countyID string) (*model.AccessRule, []*model.CountyStatus, error)
 
 	AddTraceReport(items []model.TraceExposure) (int, error)
@@ -223,8 +223,8 @@ func (s *servicesImpl) GetSymptomRuleByCounty(countyID string) (*model.SymptomRu
 	return s.app.getSymptomRuleByCounty(countyID)
 }
 
-func (s *servicesImpl) GetSymptomsRulesByCounty(appVersion *string, countyID string) (*model.SymptomsRules, error) {
-	return s.app.getSymptomsRulesByCounty(appVersion, countyID)
+func (s *servicesImpl) GetCRulesByCounty(appVersion *string, countyID string) (*model.CRules, error) {
+	return s.app.getCRulesByCounty(appVersion, countyID)
 }
 
 func (s *servicesImpl) GetAccessRuleByCounty(countyID string) (*model.AccessRule, []*model.CountyStatus, error) {
@@ -739,7 +739,7 @@ type Storage interface {
 	SaveSymptomRule(symptomRule *model.SymptomRule) error
 	DeleteSymptomRule(ID string) error
 
-	FindSymptomsRulesByCountyID(appVersion string, countyID string) (*model.SymptomsRules, error)
+	FindCRulesByCountyID(appVersion string, countyID string) (*model.CRules, error)
 
 	CreateTraceReports(items []model.TraceExposure) (int, error)
 	ReadTraceExposures(timestamp *int64, dateAdded *int64) ([]model.TraceExposure, error)
