# docs/swagger.json
@@ -3048,6 +3048,40 @@
                 }
             }
         },
+        "/covid19/crules/county/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "RokwireAuth": []
+                    }
+                ],
+                "description": "Gives the rules for a county.",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Covid19"
+                ],
+                "operationId": "GetCRulesByCounty",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "County ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/covid19/ctests": {
             "get": {
                 "security": [
@@ -4232,40 +4266,6 @@
                 "responses": {
                     "200": {
                         "description": "Successfully deleted",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/covid19/v2/symptom-rules/county/{id}": {
-            "get": {
-                "security": [
-                    {
-                        "RokwireAuth": []
-                    }
-                ],
-                "description": "Gives the symptoms rules for a county.",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Covid19"
-                ],
-                "operationId": "GetSymptomsRulesByCounty",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "County ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
                         "schema": {
                             "type": "string"
                         }
